--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
     <style name="Base.Theme.SecretDiary" parent="Theme.Material3.DayNight.NoActionBar">
-        <!-- Customize your light theme here. -->
-        <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="colorPrimary">@color/dark</item>
+        <item name="colorPrimaryVariant">@color/fiolet</item>
+        <!-- Secondary brand color. -->
+        <item name="colorSecondary">@color/fiolet_blue</item>
+        <item name="colorSecondaryVariant">@color/fiolet</item>
     </style>
 
     <style name="Theme.SecretDiary" parent="Base.Theme.SecretDiary" />
