--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="blue">#bbd0ff</color>
     <color name="dark">#9c89b8</color>
     <color name="light_pink">#f7ebec</color>
+    <color name="grey">#59656f</color>
 </resources>
