--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,22 +12,38 @@
         android:layout_height="160dp"
         android:layout_marginHorizontal="12dp"
         android:layout_marginTop="24dp"
-        app:errorEnabled="false"
         android:hint="@string/write_your_note"
+        app:errorEnabled="false"
+        app:hintTextColor="@color/grey"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:gravity="top"
             android:id="@+id/new_writing_et"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:imeOptions="actionDone"
             android:inputType="textMultiLine"
             android:maxLines="6"
-            android:textColor="@color/black"/>
+            android:textColor="@color/grey"
+            android:textColorHint="@color/grey" />
 
     </com.google.android.material.textfield.TextInputLayout>
+
+    <Button
+        android:id="@+id/undo_btn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="8dp"
+        android:background="@drawable/my_button"
+        android:text="@string/undo"
+        android:textColor="@color/grey"
+        android:textSize="20sp"
+        app:backgroundTint="@null"
+        app:layout_constraintStart_toStartOf="@id/new_writing_tf"
+        app:layout_constraintTop_toBottomOf="@id/new_writing_tf" />
 
     <Button
         android:id="@+id/save_btn"
@@ -36,24 +52,33 @@
         android:layout_marginTop="8dp"
         android:background="@drawable/my_button"
         android:text="@string/save"
-        android:textColor="@color/black"
+        android:textColor="@color/grey"
         android:textSize="20sp"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="@id/new_writing_tf"
         app:layout_constraintTop_toBottomOf="@id/new_writing_tf" />
 
-    <TextView
-        android:id="@+id/diary_tv"
+    <androidx.core.widget.NestedScrollView
+        android:id="@+id/diary_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginHorizontal="16dp"
-        android:textSize="16sp"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="24dp"
+        android:layout_weight="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/save_btn" />
+        app:layout_constraintTop_toBottomOf="@id/save_btn">
+
+        <TextView
+            android:id="@+id/diary_tv"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:textColor="@color/grey"
+            android:textSize="16sp" />
+
+    </androidx.core.widget.NestedScrollView>
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
