--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -24,6 +24,10 @@
         android:layout_height="wrap_content"
         android:hint="@string/enter_pin"
         app:errorEnabled="true"
+        app:errorTextColor="@color/red"
+        app:boxStrokeErrorColor="@color/red"
+        app:cursorErrorColor="@color/red"
+        app:errorIconDrawable="@null"
         app:hintTextColor="@color/grey"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -49,7 +53,7 @@
         android:background="@drawable/my_button"
         android:text="@string/log_in"
         android:textColor="@color/grey"
-        android:textSize="20sp"
+        android:textSize="18sp"
         app:backgroundTint="@null"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
