--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
     <color name="dark">#9c89b8</color>
     <color name="light_pink">#f7ebec</color>
     <color name="grey">#59656f</color>
+    <color name="red">#ff99c8</color>
 </resources>
